RESOLVED FIXED58083
Underline thickness is not uniform under non-integral scale factor
https://bugs.webkit.org/show_bug.cgi?id=58083
Summary Underline thickness is not uniform under non-integral scale factor
mitz
Reported 2011-04-07 14:46:30 PDT
Underline thickness is not uniform under non-integral scale factor
Attachments
Use translation-invariant dimension rounding for text decorations (42.68 KB, patch)
2011-04-07 15:08 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2011-04-07 14:47:54 PDT
mitz
Comment 2 2011-04-07 15:08:54 PDT
Created attachment 88713 [details] Use translation-invariant dimension rounding for text decorations
mitz
Comment 3 2011-04-07 15:16:16 PDT
WebKit Review Bot
Comment 4 2011-04-07 15:23:11 PDT
http://trac.webkit.org/changeset/83216 might have broken EFL Linux Release (Build)
mitz
Comment 5 2011-04-07 16:07:36 PDT
(In reply to comment #4) > http://trac.webkit.org/changeset/83216 might have broken EFL Linux Release (Build) <http://trac.webkit.org/changeset/83226>
Note You need to log in before you can comment on or make changes to this bug.